Initial support to remote folder
- Added folder selection.
- Folder mounts as Disk (X:\) on Windows .
- Works when the advantage "Disk Drives" is enabled.
- Auto mount and auto unmount.

--- a/PRM.Core/Languages/de-de.json
+++ b/PRM.Core/Languages/de-de.json
@@ -201,6 +201,8 @@
   "server_editor_advantage_ssh_startup_auto_command": "Auto-Befehl",
   "server_editor_advantage_ssh_startup_auto_kitty_session_tip": "support external config by select a session file path of KiTTY",
   "server_editor_advantage_sftp_startup_path": "Start-Pfad",
+  "server_editor_advantage_folder_location": "Ordnerspeicherort",
+  "server_editor_advantage_enable_remote_folder": "Remote-Ordner aktivieren",
   // server editor - RD-gateway group items
   "server_editor_gateway_mode": "Verbindung",
   "server_editor_gateway_mode_automatically_detect": "RD-Gatewayservereinstellungen automatisch ermitteln",
