--- a/PRM.Core/Languages/en-us.json
+++ b/PRM.Core/Languages/en-us.json
@@ -201,6 +201,8 @@
   "server_editor_advantage_ssh_startup_auto_command": "Auto command",
   "server_editor_advantage_ssh_startup_auto_kitty_session_tip": "Use external configuration by selecting a session file path for KiTTY",
   "server_editor_advantage_sftp_startup_path": "Startup path",
+  "server_editor_advantage_folder_location":  "Folder Location",
+  "server_editor_advantage_enable_remote_folder": "Enable Remote Folder",
   // server editor - RD-gateway group items
   "server_editor_gateway_mode": "Connection",
   "server_editor_gateway_mode_automatically_detect": "Automatically detect RD Gateway Server settings",
