--- a/PRM.Core/Languages/fr-FR.json
+++ b/PRM.Core/Languages/fr-FR.json
@@ -201,6 +201,8 @@
   "server_editor_advantage_ssh_startup_auto_command": "Commande automatique",
   "server_editor_advantage_ssh_startup_auto_kitty_session_tip": "prendre en charge la configuration externe en sélectionnant un chemin de fichier de session de KiTTY",
   "server_editor_advantage_sftp_startup_path": "Chemin de démarrage",
+  "server_editor_advantage_folder_location": "emplacement du dossier",
+  "server_editor_advantage_enable_remote_folder": "activer le dossier distant",
   // server editor - RD-gateway group items
   "server_editor_gateway_mode": "Connection",
   "server_editor_gateway_mode_automatically_detect": "Détecter automatiquement les paramètres du serveur RD Gateway",
